feat: add more style

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,35 +1,21 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #0b1332 #050c0f;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
   }
-}
+
+  *::-webkit-scrollbar-track {
+    background: #050c0f;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #0b1332;
+    border-radius: 10px;
+    border: 3px solid #0b0a0a;
+  }
